# math

./: .gitignore  Makefile  README.md  flake.nix  mkdocs.yml  pyproject.toml
agents/: release.md
docs/: preamble-pdf.tex  preamble.tex
docs/Profile/: index.md
docs/Publications/: 2025-07-21-Cayley-Hamilton.md  2025-07-26-Fundamental-Theorem-of-Algebra.md  2026-01-02-Polynomial-Approximation.md  2026-01-09-Faa-Di-Bruno.md  2026-07-02-Discrete-Faa-di-Bruno-Simulation.md  2026-07-02-Discrete-Faa-di-Bruno-via-Moebius-Inversion.md  2026-07-10-Discrete-and-Differential-Calculus.md  index.md
docs/javascript/: config.js
docs/stylesheets/: extra.css
meta/: alpha-local.bst  plainnat-local.bst  refs.bib
scripts/: hooks.py
