[project]
name = "math-site"
version = "0.1.0"
description = "Heinrich Hartmann — Mathematics"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=7.2.4",
    "pymdown-extensions>=10.16.1",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-math @ git+https://github.com/HeinrichHartmann/mkdocs-math.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["_pkg"]
